auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "66c1075a",
+   "id": "32f2f574",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecafa5d1",
+   "id": "453ddee6",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -21,17 +21,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8f038f",
+   "id": "9345a701",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "efec7de8",
+   "id": "78ea9c64",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -56,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d13e1a51",
+   "id": "d7c3cf1b",
    "metadata": {},
    "source": [
     "### References\n",
@@ -71,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4748aa3",
+   "id": "3af9fad0",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -82,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c77735ac",
+   "id": "462ff6ba",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f06106a",
+   "id": "6a4dbce7",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb1524a",
+   "id": "40a32eba",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e9a7a79",
+   "id": "6d21ad1a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "004cde48",
+   "id": "5cac4639",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "035c258a",
+   "id": "896aa1b8",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -147,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "228db28d",
+   "id": "e5a1837b",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe544f1",
+   "id": "e72ccb3d",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -204,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdba8a63",
+   "id": "62e2a2c2",
    "metadata": {
     "hide-output": false
    },
@@ -225,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "953f4875",
+   "id": "628aff9a",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -240,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7781893c",
+   "id": "1d4f954d",
    "metadata": {
     "hide-output": false
    },
@@ -257,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cd04d4a",
+   "id": "e9accb83",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -272,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f34731",
+   "id": "966d551e",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f36542",
+   "id": "0f5dd32f",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -332,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aceca08",
+   "id": "d1bb3703",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -347,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12383863",
+   "id": "f958284d",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d1fb6dd",
+   "id": "b801d6a5",
    "metadata": {
     "hide-output": false
    },
@@ -383,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "629b3ce5",
+   "id": "a8fe4192",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -394,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ef2362",
+   "id": "fe58f42f",
    "metadata": {
     "hide-output": false
    },
@@ -405,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d82e4ad",
+   "id": "89e06ccc",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -414,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "827d2ed4",
+   "id": "59f0071e",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "774e37fb",
+   "id": "bfa891c0",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -445,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb9ad2a0",
+   "id": "36b66bad",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa78f964",
+   "id": "004fb4fe",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -484,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c94d1a8c",
+   "id": "1b184d40",
    "metadata": {
     "hide-output": false
    },
@@ -502,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64142dfa",
+   "id": "cabbaa13",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -512,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82bc768d",
+   "id": "73d55a7a",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc43e97b",
+   "id": "4edc81bf",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -570,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69613038",
+   "id": "e4d2569f",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20138003",
+   "id": "03916f3c",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -606,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3194acef",
+   "id": "79438811",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d07b41",
+   "id": "da1e641a",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -638,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9cf1796",
+   "id": "cac25ee6",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91db5b21",
+   "id": "b0c4d330",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -680,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be26ba8c",
+   "id": "679f3c07",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68ccb25c",
+   "id": "684263bc",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92222d57",
+   "id": "e35be062",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1584ccdb",
+   "id": "c216831e",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "750e8e48",
+   "id": "1fce98a0",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -738,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61fe1969",
+   "id": "83f502ab",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df130e62",
+   "id": "92361574",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -779,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a19b4a",
+   "id": "47f9918f",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bd1ea4a",
+   "id": "3ad4d79e",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -823,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "167c8351",
+   "id": "e1978f81",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e97ff99",
+   "id": "83bcbce9",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f357ad",
+   "id": "6ecd1a6f",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -859,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "190ee1d3",
+   "id": "3cc30831",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa5d1df",
+   "id": "df1682b8",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -879,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e60da8",
+   "id": "de59674a",
    "metadata": {
     "hide-output": false
    },
@@ -897,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "973b3202",
+   "id": "c83ba508",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -927,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60fab46e",
+   "id": "c5a12518",
    "metadata": {
     "hide-output": false
    },
@@ -946,7 +953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f83fad7e",
+   "id": "e7d82daa",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -957,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39a6237b",
+   "id": "9b62e878",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc7ec776",
+   "id": "7022698a",
    "metadata": {
     "hide-output": false
    },
@@ -989,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af1965c7",
+   "id": "25af70a3",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1008,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1548a04a",
+   "id": "85dba420",
    "metadata": {
     "hide-output": false
    },
@@ -1033,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51d98953",
+   "id": "23d8ca31",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cc93738",
+   "id": "85aa6eaa",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1062,7 +1069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "371d5595",
+   "id": "fc3a3e9e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1070,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b2eda05",
+   "id": "e1ee8701",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1087,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "505366d9",
+   "id": "d3afd842",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1096,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dbfdbaa",
+   "id": "5dda6af2",
    "metadata": {
     "hide-output": false
    },
@@ -1107,7 +1114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b0dc3d",
+   "id": "853c4c69",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1116,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6499e466",
+   "id": "51949b86",
    "metadata": {
     "hide-output": false
    },
@@ -1130,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bbb9e7d",
+   "id": "2220f42b",
    "metadata": {
     "hide-output": false
    },
@@ -1147,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e588311e",
+   "id": "e969de1c",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1155,7 +1162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437e13c2",
+   "id": "5826be14",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1168,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5102249e",
+   "id": "0bd4ea90",
    "metadata": {
     "hide-output": false
    },
@@ -1179,7 +1186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d57d59",
+   "id": "05bb1e7f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1188,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f5150e",
+   "id": "c55e58e9",
    "metadata": {
     "hide-output": false
    },
@@ -1207,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fc8d7d1",
+   "id": "2f4e8388",
    "metadata": {
     "hide-output": false
    },
@@ -1222,7 +1229,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.4862146,
+  "date": 1764546698.6685174,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
