--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "31cda48b",
+   "id": "131ce147",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee275e3",
+   "id": "1b7294a3",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1043e86",
+   "id": "2321cc94",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
@@ -34,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e217eff2",
+   "id": "1e1ba9ba",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4f1f2ca",
+   "id": "1def173c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -96,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1af5530b",
+   "id": "7ccec183",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fbaa5f6",
+   "id": "61d9819a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -122,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64b81976",
+   "id": "8463fa4e",
    "metadata": {
     "hide-output": false
    },
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d75c67a",
+   "id": "87dc901c",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -142,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a02a212c",
+   "id": "a0d249a4",
    "metadata": {
     "hide-output": false
    },
@@ -153,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0716f27d",
+   "id": "e71623c8",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -163,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa26acbd",
+   "id": "dab9b0bc",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -205,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f62dc65",
+   "id": "c7258f33",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d7672a",
+   "id": "83d6d538",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ac78d29",
+   "id": "dce1f7a9",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -310,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b7c90f",
+   "id": "80bc177b",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f25feb9",
+   "id": "ef73bda1",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -417,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "189f61e6",
+   "id": "e79daa4a",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a651e1d7",
+   "id": "d5591af0",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -488,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35af4bb8",
+   "id": "7018914b",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac3b9be",
+   "id": "ac665ed9",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0265dcd6",
+   "id": "1b581b79",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -558,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9067bc49",
+   "id": "8974be1c",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e2f6a0e",
+   "id": "02f47dc7",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -581,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07b67919",
+   "id": "19c3fe81",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c089135",
+   "id": "5757f984",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -625,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3101c168",
+   "id": "316b5720",
    "metadata": {
     "hide-output": false
    },
@@ -656,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d2feb78",
+   "id": "75d82618",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb4156c9",
+   "id": "a247019a",
    "metadata": {
     "hide-output": false
    },
@@ -713,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c9d935a",
+   "id": "38f25237",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "537d2868",
+   "id": "c3b86b48",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -736,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c68c04cf",
+   "id": "262615b1",
    "metadata": {
     "hide-output": false
    },
@@ -751,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23254506",
+   "id": "710268ee",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -760,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "481b08ef",
+   "id": "0e5fe984",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "025c9ce1",
+   "id": "8920e419",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -791,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10221ba8",
+   "id": "44dcdd33",
    "metadata": {
     "hide-output": false
    },
@@ -840,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1aad39",
+   "id": "bc6032a8",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -849,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f8b3dfe",
+   "id": "efb19a98",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71114006",
+   "id": "2afe5ee8",
    "metadata": {
     "hide-output": false
    },
@@ -873,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b62b7aa8",
+   "id": "f45b1ac1",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -882,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ebf1467",
+   "id": "5a994dcb",
    "metadata": {
     "hide-output": false
    },
@@ -894,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d72c68d8",
+   "id": "e1dad4e0",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -904,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a568c1fd",
+   "id": "70380787",
    "metadata": {
     "hide-output": false
    },
@@ -977,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb79c577",
+   "id": "a6887992",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1043,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bece22c",
+   "id": "9d0886ec",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1051,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e096fba",
+   "id": "0b7bebf6",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1064,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "983caea0",
+   "id": "7fc114ed",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1075,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207d2fef",
+   "id": "c7fdb10a",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fddf22bd",
+   "id": "dcc8e4f8",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1096,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "313e5e99",
+   "id": "aca8dafc",
    "metadata": {
     "hide-output": false
    },
@@ -1132,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da9b8e2",
+   "id": "73995407",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1141,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0c0ac69",
+   "id": "e1a6cde2",
    "metadata": {
     "hide-output": false
    },
@@ -1161,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c11cf45",
+   "id": "a8d2180f",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1170,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67a35c6a",
+   "id": "5eea0dae",
    "metadata": {
     "hide-output": false
    },
@@ -1197,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d11ad58",
+   "id": "cea0d31d",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1206,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02fc187a",
+   "id": "dd5edf2f",
    "metadata": {
     "hide-output": false
    },
@@ -1225,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "274c56f2",
+   "id": "e23deed9",
    "metadata": {
     "hide-output": false
    },
@@ -1270,7 +1278,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.621425,
+  "date": 1764546698.8101268,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
