--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e149289",
+   "id": "d713ad1a",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88a8ae6",
+   "id": "fc3abd65",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,17 +21,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3369178a",
+   "id": "b235e567",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1cecdc29",
+   "id": "6b5c4661",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -52,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af86e3de",
+   "id": "968e7f81",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd5130ab",
+   "id": "76cf6bfb",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -72,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d228eafb",
+   "id": "7cf6affe",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ab1a9b",
+   "id": "eb02d765",
    "metadata": {},
    "source": [
     "## The Model"
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036b3cd8",
+   "id": "7acdc400",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -164,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc54ce5e",
+   "id": "fdee79b1",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -182,7 +189,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-c7b32221-efc2-4da7-9411-0732c855079b'></a>\n",
+    "<a id='equation-33b60680-7113-45fa-98a7-be500ddb0789'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -195,7 +202,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-4e6db971-f2dd-4d5d-97e9-f0ef20beb9ea'></a>\n",
+    "<a id='equation-b020aebe-75a2-4732-969f-d38d2bbadad9'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -215,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a44e418e",
+   "id": "85f29b21",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -249,7 +256,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-0fc81ddf-e8be-4f8c-8846-874c90661ac7'></a>\n",
+    "<a id='equation-d7d81036-0d63-46fc-a6b1-84bcf158b75e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -259,7 +266,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-7ac11063-ccde-4103-85ea-b34947646ec7'></a>\n",
+    "<a id='equation-47524d4a-034c-4278-8377-87ea5fda68c6'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -273,7 +280,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-42a8337a-3f9b-4f46-a134-d47d5ff07b7e'></a>\n",
+    "<a id='equation-9b573dcb-d6de-42bf-9261-d535d8ef227b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -283,7 +290,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-12c5cb0c-35c4-42c9-ae98-75eedb721f4d'></a>\n",
+    "<a id='equation-350f3fdc-ec5b-417b-9f6f-8d47ae37dcf0'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -297,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270e3767",
+   "id": "967ff119",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -308,7 +315,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-64ca9d46-8252-41d7-bf39-7cac432aca41'></a>\n",
+    "<a id='equation-b99f1931-135f-455a-aeea-15c6a9bea651'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -320,7 +327,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-3787b86d-7c27-447d-9b47-d2e70b8f354d'></a>\n",
+    "<a id='equation-f0c4d76f-715c-40ba-9ec7-4bfc40c77b35'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -360,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e87a5be6",
+   "id": "c86acb7c",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -382,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4db479",
+   "id": "cac89cc8",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -393,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd604e3",
+   "id": "01fab123",
    "metadata": {
     "hide-output": false
    },
@@ -404,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b1f59c2",
+   "id": "d04e6772",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -413,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db35a69f",
+   "id": "847307d2",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0d20753",
+   "id": "6786e814",
    "metadata": {
     "hide-output": false
    },
@@ -449,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5c4f77",
+   "id": "727d262b",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c2c557e",
+   "id": "801742d5",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe1425a3",
+   "id": "b58e313a",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -514,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ee29fd2",
+   "id": "baf737e7",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa13692",
+   "id": "1eadb58d",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5728197e",
+   "id": "0979d5d7",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -562,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61b5838",
+   "id": "15c4a1d4",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85982088",
+   "id": "d28f1934",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19eb691c",
+   "id": "fe829eea",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -601,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cec4ecd",
+   "id": "643b7daf",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6dcda7",
+   "id": "a30c80ec",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -640,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51aae74",
+   "id": "532d748d",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76dbe6ff",
+   "id": "3cc88912",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -675,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "339c757e",
+   "id": "f2d3fb05",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f4742e8",
+   "id": "6216c3e3",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "402d47aa",
+   "id": "21d14969",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -717,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "076089e0",
+   "id": "53a14a0b",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "296e9cf1",
+   "id": "fb103d50",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -746,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24b20aa1",
+   "id": "c3688081",
    "metadata": {
     "hide-output": false
    },
@@ -765,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62bd3938",
+   "id": "be985b3e",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -776,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f76483b4",
+   "id": "2161d9c3",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d51ad5f",
+   "id": "1515af80",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9c03ba3",
+   "id": "60c2d0ca",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -857,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39ef69d8",
+   "id": "c8db568f",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5da59e30",
+   "id": "e3bc3f3f",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -900,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae0fc7be",
+   "id": "77485f48",
    "metadata": {
     "hide-output": false
    },
@@ -937,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d71345a6",
+   "id": "26659ae2",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -945,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad824e6",
+   "id": "01228883",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -956,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2077096",
+   "id": "2f67085d",
    "metadata": {
     "hide-output": false
    },
@@ -968,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c7032b",
+   "id": "c4065362",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -978,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43788c2c",
+   "id": "27f9f319",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d2ccbaa",
+   "id": "ed3fa61c",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1000,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e721333c",
+   "id": "2883d432",
    "metadata": {
     "hide-output": false
    },
@@ -1011,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b9bf20b",
+   "id": "dd918a35",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1022,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d94848d",
+   "id": "ec109dff",
    "metadata": {
     "hide-output": false
    },
@@ -1046,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e992fc27",
+   "id": "fd0a3bb6",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1056,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75e78844",
+   "id": "aed0da82",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1067,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b749d32e",
+   "id": "49bd7bf5",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8f9fe1b",
+   "id": "5aab7891",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1089,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48ba2618",
+   "id": "0564ec91",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032f98e8",
+   "id": "72a32e9b",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1111,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "068809dc",
+   "id": "61bdc17b",
    "metadata": {
     "hide-output": false
    },
@@ -1122,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b9d6d12",
+   "id": "6519a99c",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1131,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80d2b452",
+   "id": "96badd21",
    "metadata": {
     "hide-output": false
    },
@@ -1147,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8975db10",
+   "id": "b764de64",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1156,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfa6e5ea",
+   "id": "f9203ad7",
    "metadata": {
     "hide-output": false
    },
@@ -1168,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97b93832",
+   "id": "af3521f8",
    "metadata": {
     "hide-output": false
    },
@@ -1185,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf6c048d",
+   "id": "7d1f8d3f",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1236,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e1aba67",
+   "id": "54aaca95",
    "metadata": {
     "hide-output": false
    },
@@ -1253,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "992295e5",
+   "id": "51575c9a",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1262,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64344dd6",
+   "id": "032e7ff5",
    "metadata": {
     "hide-output": false
    },
@@ -1283,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7982c75d",
+   "id": "dd1ea729",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1291,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cdf28dd",
+   "id": "0614d1fa",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1306,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b8e589",
+   "id": "18d72892",
    "metadata": {
     "hide-output": false
    },
@@ -1323,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d7c627e",
+   "id": "5a2ffff5",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1331,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da3ce8e",
+   "id": "e18b45ca",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1340,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68afb770",
+   "id": "58e317dc",
    "metadata": {
     "hide-output": false
    },
@@ -1356,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "887d2aa3",
+   "id": "d07eeb84",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1366,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d24e77ab",
+   "id": "b726b6e5",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1381,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e438d9de",
+   "id": "a0b2709d",
    "metadata": {
     "hide-output": false
    },
@@ -1392,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6013c3fb",
+   "id": "99da7de1",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1401,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ee8f80b",
+   "id": "041c69a4",
    "metadata": {
     "hide-output": false
    },
@@ -1425,7 +1432,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.6882038,
+  "date": 1764546698.8803542,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
