--- a/ifp_dl.ipynb
+++ b/ifp_dl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4bbd2080",
+   "id": "386222e9",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33140536",
+   "id": "d207a63b",
    "metadata": {},
    "source": [
     "# Policy Gradient-Based Optimal Savings"
@@ -21,17 +21,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47682fd",
+   "id": "5a86a62a",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f6a67805",
+   "id": "44da2600",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -66,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60e0f8e7",
+   "id": "f1a9bd45",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d09b0c27",
+   "id": "5e1facc2",
    "metadata": {},
    "source": [
     "We’ll use the following imports"
@@ -86,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d557d504",
+   "id": "155cb194",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bff2e8e1",
+   "id": "a4c1cade",
    "metadata": {},
    "source": [
     "## Theory\n",
@@ -114,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628dfa62",
+   "id": "d9220d2d",
    "metadata": {},
    "source": [
     "### Household problem\n",
@@ -155,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2a6b342",
+   "id": "988f9e60",
    "metadata": {},
    "source": [
     "### Lifetime Value and Optimization\n",
@@ -203,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01dc55e6",
+   "id": "4864b7da",
    "metadata": {},
    "source": [
     "### The policy gradient approach\n",
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd654c4",
+   "id": "8082a79c",
    "metadata": {},
    "source": [
     "## Network\n",
@@ -291,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70391d11",
+   "id": "09bef167",
    "metadata": {
     "hide-output": false
    },
@@ -312,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7daadd1a",
+   "id": "d11d2f09",
    "metadata": {},
    "source": [
     "We use a class called `LayerParams` to store parameters representing a single\n",
@@ -322,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe63af1d",
+   "id": "b06cca62",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f932c5a5",
+   "id": "d06bd927",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using Le Cun\n",
@@ -349,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4871f56",
+   "id": "95f5d3aa",
    "metadata": {
     "hide-output": false
    },
@@ -369,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "118a98fc",
+   "id": "de50d755",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -379,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1e3cbd2",
+   "id": "dc272b56",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01cb1412",
+   "id": "ecf59df7",
    "metadata": {},
    "source": [
     "Here’s a function to train the network by gradient ascent, given a generic loss\n",
@@ -420,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1785df86",
+   "id": "17ba0697",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f812874",
+   "id": "182c14ee",
    "metadata": {},
    "source": [
     "## Cake Eating Case\n",
@@ -502,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8761d5c",
+   "id": "057240b0",
    "metadata": {},
    "source": [
     "### Cake eating loss function\n",
@@ -513,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ec8196c",
+   "id": "43024a2f",
    "metadata": {
     "hide-output": false
    },
@@ -531,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e465ba7f",
+   "id": "9a7201f3",
    "metadata": {},
    "source": [
     "We use CRRA utility."
@@ -540,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "479ed30c",
+   "id": "3ada2321",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27e2b55",
+   "id": "956dd2b7",
    "metadata": {},
    "source": [
     "Now we provide a function that implements a consumption policy as a neural network, given the\n",
@@ -564,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be55b05c",
+   "id": "df76bcec",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119ac110",
+   "id": "9a517043",
    "metadata": {},
    "source": [
     "The next function approximates lifetime value for the cake eating agent\n",
@@ -603,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74421158",
+   "id": "42d14499",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c809da15",
+   "id": "b631ecad",
    "metadata": {},
    "source": [
     "Here’s the loss function we will minimize."
@@ -650,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8c0b2a3",
+   "id": "017f2c4f",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69181ee7",
+   "id": "07fbb625",
    "metadata": {},
    "source": [
     "### Train and solve\n",
@@ -678,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a4ac03",
+   "id": "0382496a",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded075d6",
+   "id": "3e96cf80",
    "metadata": {},
    "source": [
     "We test stability."
@@ -699,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f6d49c8",
+   "id": "68e52d5a",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9addffee",
+   "id": "e188e466",
    "metadata": {},
    "source": [
     "We compute the optimal consumption rate and lifetime value from the analytical\n",
@@ -720,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f7f7502",
+   "id": "92373935",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e48b7e48",
+   "id": "7bbe684a",
    "metadata": {},
    "source": [
     "Now let’s train the network."
@@ -743,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a878840a",
+   "id": "2110dc3c",
    "metadata": {
     "hide-output": false
    },
@@ -767,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7148fabe",
+   "id": "e3db37de",
    "metadata": {},
    "source": [
     "First we plot the evolution of lifetime value over the epochs."
@@ -776,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "015ac0d8",
+   "id": "1d3a85c8",
    "metadata": {
     "hide-output": false
    },
@@ -793,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7477e83d",
+   "id": "bdfb610c",
    "metadata": {},
    "source": [
     "Next we compare the learned and optimal policies."
@@ -802,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e19237cf",
+   "id": "7d12baf6",
    "metadata": {
     "hide-output": false
    },
@@ -827,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bddb0f59",
+   "id": "32e3c800",
    "metadata": {},
    "source": [
     "### Simulation\n",
@@ -841,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26355990",
+   "id": "407db047",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b4be82",
+   "id": "4bde463f",
    "metadata": {},
    "source": [
     "Let’s simulate and plot path"
@@ -890,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "867c650d",
+   "id": "d82465b5",
    "metadata": {
     "hide-output": false
    },
@@ -920,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf64ae09",
+   "id": "afe3fa8c",
    "metadata": {},
    "source": [
     "## IFP Model\n",
@@ -932,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39d34f00",
+   "id": "7e24355e",
    "metadata": {},
    "source": [
     "### JAX Implementation\n",
@@ -943,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5326f2cb",
+   "id": "5dc771d7",
    "metadata": {
     "hide-output": false
    },
@@ -976,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12bf9686",
+   "id": "39383d8c",
    "metadata": {},
    "source": [
     "### Solving the IID model using the EGM\n",
@@ -999,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "362b612c",
+   "id": "533db853",
    "metadata": {
     "hide-output": false
    },
@@ -1055,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ea588e8",
+   "id": "6c2f9f5c",
    "metadata": {},
    "source": [
     "Here’s the solver using time iteration:"
@@ -1064,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "095d89f0",
+   "id": "3a5952a6",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dce14820",
+   "id": "394573b9",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the optimal policy:"
@@ -1118,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7c2e34b",
+   "id": "d4f43e53",
    "metadata": {
     "hide-output": false
    },
@@ -1137,7 +1144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "637fdc41",
+   "id": "f9a2a614",
    "metadata": {},
    "source": [
     "Plot the optimal consumption policy:"
@@ -1146,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bfecd3f",
+   "id": "12874b0b",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "717fc0f6",
+   "id": "fa41b004",
    "metadata": {},
    "source": [
     "### Solving the IID model with DL\n",
@@ -1182,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "573f7fab",
+   "id": "b3d8adf8",
    "metadata": {
     "hide-output": false
    },
@@ -1240,7 +1247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c2eae5",
+   "id": "113e836a",
    "metadata": {},
    "source": [
     "The loss function is the negation of the expected lifetime value."
@@ -1249,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dce961f",
+   "id": "293e8e45",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1733e40",
+   "id": "747c86d3",
    "metadata": {},
    "source": [
     "Now let’s set up and train the network.\n",
@@ -1274,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49ee8e56",
+   "id": "429eb4e4",
    "metadata": {
     "hide-output": false
    },
@@ -1303,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0289561b",
+   "id": "c7b0e0a3",
    "metadata": {},
    "source": [
     "Plot the learning progress."
@@ -1312,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1938c4b1",
+   "id": "89523c27",
    "metadata": {
     "hide-output": false
    },
@@ -1328,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6156531b",
+   "id": "ce9641db",
    "metadata": {},
    "source": [
     "Compare EGM and DL solutions."
@@ -1337,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f14fbcf",
+   "id": "470f4f20",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dc7a0a0",
+   "id": "001da808",
    "metadata": {},
    "source": [
     "The fit is quite good."
@@ -1369,7 +1376,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.721952,
+  "date": 1764546698.915842,
   "filename": "ifp_dl.md",
   "kernelspec": {
    "display_name": "Python",
