--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4e036600",
+   "id": "05c4f46a",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b1bcae",
+   "id": "24e23b9d",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b26b32",
+   "id": "d36e0b7c",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "\n",
     "<a id='index-0'></a>"
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa71708",
+   "id": "eeade7ac",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -66,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c01bdd2",
+   "id": "ce22268e",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b61afa0b",
+   "id": "dc4068ff",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -92,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a9f3287",
+   "id": "fff0eb17",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "293a7e4d",
+   "id": "a79670bc",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -141,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "062fd0db",
+   "id": "628fbde1",
    "metadata": {
     "hide-output": false
    },
@@ -156,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca831fd",
+   "id": "53127cf8",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -185,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6471054",
+   "id": "57019730",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b054ec",
+   "id": "e54eff5f",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -232,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dfd310f",
+   "id": "fd7fc6f2",
    "metadata": {
     "hide-output": false
    },
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a890c01",
+   "id": "87d9fcb8",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -267,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "545ebe7d",
+   "id": "5cf88dd2",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67d007a3",
+   "id": "b56480a3",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -291,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31e40845",
+   "id": "15083d7f",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a46457c3",
+   "id": "d3eeb337",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -315,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c880e8d2",
+   "id": "a07bbb35",
    "metadata": {
     "hide-output": false
    },
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "575e4d15",
+   "id": "39312338",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -339,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b99dd66",
+   "id": "c8999f9a",
    "metadata": {
     "hide-output": false
    },
@@ -358,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7955fc1",
+   "id": "cb3c2e8a",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -372,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea25e84",
+   "id": "ff647533",
    "metadata": {
     "hide-output": false
    },
@@ -416,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "593d8bd6",
+   "id": "57879a1b",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -425,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b5b4ac5",
+   "id": "89631d58",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d8fc4f1",
+   "id": "7a86469c",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -449,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b654176",
+   "id": "aa41bd9e",
    "metadata": {
     "hide-output": false
    },
@@ -464,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a6b821",
+   "id": "c5d6110f",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -475,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e96d09b",
+   "id": "9b3bf64c",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -491,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53b6618a",
+   "id": "063b99d9",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085cba68",
+   "id": "412d2995",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -528,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e9eb024",
+   "id": "65ccb841",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad24ca8",
+   "id": "131eb5f4",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -554,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "535d87a0",
+   "id": "b20de511",
    "metadata": {
     "hide-output": false
    },
@@ -576,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36cbf636",
+   "id": "d58eacbc",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -595,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "401b4e60",
+   "id": "8b1afb98",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -614,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2db5fbcf",
+   "id": "f9377144",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -625,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e37b614c",
+   "id": "116fbf03",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c77080ca",
+   "id": "6d9bfeea",
    "metadata": {
     "hide-output": false
    },
@@ -683,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e76ccad",
+   "id": "164d1340",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -692,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88ec889c",
+   "id": "59ad3ca2",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bd3d165",
+   "id": "3149c6c6",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea1f42c6",
+   "id": "f8a231c2",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -729,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df6051c",
+   "id": "c2b38148",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -740,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6402358",
+   "id": "cc714b9d",
    "metadata": {
     "hide-output": false
    },
@@ -784,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11ea4bdf",
+   "id": "3a6c3bc5",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -793,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70005be2",
+   "id": "19bbc8f4",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "472e211f",
+   "id": "3b146009",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -816,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6bb0284",
+   "id": "9017dfb5",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e5699c7",
+   "id": "c58df18b",
    "metadata": {
     "hide-output": false
    },
@@ -842,7 +850,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.7868984,
+  "date": 1764546698.9856517,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
