--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6a37ced9",
+   "id": "5a6b1baa",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8960c2d",
+   "id": "dfbfb8ad",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9fe7f3",
+   "id": "130b49e6",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "This lecture provides a JAX implementation of a model in [Dynamic Programming](https://dp.quantecon.org/).\n",
     "\n",
@@ -36,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e28583c",
+   "id": "3b7085ac",
    "metadata": {
     "hide-output": false
    },
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "519e7d16",
+   "id": "30341d22",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b48c7caa",
+   "id": "3d3234fe",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -200,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ba93e2f",
+   "id": "a0721fea",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c966e876",
+   "id": "d4e7e0a3",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -227,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "234e793e",
+   "id": "632eb587",
    "metadata": {
     "hide-output": false
    },
@@ -238,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "756d72d1",
+   "id": "b948e077",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -247,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7488893",
+   "id": "e27b2f13",
    "metadata": {
     "hide-output": false
    },
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa5e1480",
+   "id": "458aa672",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -267,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b100d15",
+   "id": "7377b162",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54adac75",
+   "id": "40cca499",
    "metadata": {
     "hide-output": false
    },
@@ -327,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099d4a22",
+   "id": "8525f1db",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -336,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deb18231",
+   "id": "fa7ae125",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f55dc32",
+   "id": "d80dc7b2",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -386,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a126ce5f",
+   "id": "fc0dec4a",
    "metadata": {
     "hide-output": false
    },
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "556d4cb6",
+   "id": "09c77168",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -407,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a8f61d2",
+   "id": "e4afa875",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e673c1f",
+   "id": "087fdf2b",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -433,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6d1fe3e",
+   "id": "9be57b7f",
    "metadata": {
     "hide-output": false
    },
@@ -450,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f81a64",
+   "id": "b0cf6dcc",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -459,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5922616",
+   "id": "cd6b806c",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6403ed91",
+   "id": "10a9f4f8",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -499,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f4d4d27",
+   "id": "43bf0f3e",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17e83641",
+   "id": "fe898668",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3a5e265",
+   "id": "07b3382c",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -542,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1637331",
+   "id": "776e5f0b",
    "metadata": {
     "hide-output": false
    },
@@ -560,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d04f87",
+   "id": "b0aeb5a1",
    "metadata": {},
    "source": [
     "Now let’s do a simulation.\n",
@@ -571,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cb56fdc",
+   "id": "c7d84705",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bfea67f",
+   "id": "aeab8c69",
    "metadata": {},
    "source": [
     "Here’s code to simulate inventories"
@@ -593,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a66a72e",
+   "id": "17ea5c32",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea33a202",
+   "id": "1c3399ca",
    "metadata": {},
    "source": [
     "Here’s code to generate a plot."
@@ -625,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3c1874f",
+   "id": "0810ba53",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11ee176e",
+   "id": "c252cdd7",
    "metadata": {},
    "source": [
     "Let’s take a look."
@@ -666,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80f92d7b",
+   "id": "d51332dc",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.805591,
+  "date": 1764546699.005724,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
