--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b03877ad",
+   "id": "0543a087",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd39db7a",
+   "id": "d907ba1b",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,17 +21,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17281c93",
+   "id": "cd39ed64",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88bd2f0d",
+   "id": "b5cff2b3",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -61,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13abc6bd",
+   "id": "ec0b9652",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68e33562",
+   "id": "61137ab5",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bbca1aa",
+   "id": "310ed826",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa06ca21",
+   "id": "dfcb2641",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -120,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d07af290",
+   "id": "87c7aace",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab4e9dc6",
+   "id": "78aaa1ef",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b1ff9bd",
+   "id": "51a233b8",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -170,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d205644",
+   "id": "898d5910",
    "metadata": {
     "hide-output": false
    },
@@ -186,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "739e67c3",
+   "id": "3a732e4e",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -197,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5af0bf9f",
+   "id": "250ce537",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53f7fb12",
+   "id": "57f753c6",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -232,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4bec5dc",
+   "id": "5f2faa35",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63d1b9ef",
+   "id": "bada588a",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -268,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bbe05cb",
+   "id": "91a11251",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9ab24c8",
+   "id": "6f2fe116",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -308,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a4d4583",
+   "id": "350f3f81",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45295425",
+   "id": "fadf4572",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -348,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c279c389",
+   "id": "c40c2a61",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f232a1",
+   "id": "a342a90e",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -375,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56ef8b67",
+   "id": "d2c349df",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7e0ddc",
+   "id": "f196c0d6",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -403,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dba8cc5",
+   "id": "faae4ca6",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -416,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad81bbdb",
+   "id": "269aebb3",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -457,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc6287e3",
+   "id": "01c91030",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a921e9e4",
+   "id": "c858c41e",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using He\n",
@@ -484,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62a82fe1",
+   "id": "f6d29634",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39c7ef8",
+   "id": "9f0514ba",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -513,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd3f5040",
+   "id": "0003dc12",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b454b04",
+   "id": "97655844",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -556,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12cfc8af",
+   "id": "1fcaecff",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -567,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cf21bc2",
+   "id": "2e441ee4",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e79966",
+   "id": "bca87547",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -604,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0505855",
+   "id": "939b7e52",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76abc22",
+   "id": "fc5debd4",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -634,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09fbe0e8",
+   "id": "7e411532",
    "metadata": {
     "hide-output": false
    },
@@ -645,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "731c7f48",
+   "id": "7a16c9aa",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -667,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcba9b89",
+   "id": "488546d5",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -681,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a6d675",
+   "id": "dd57c5ab",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cad46e71",
+   "id": "a7cbb3ba",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -730,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a2765fd",
+   "id": "a80580b8",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd7f890",
+   "id": "eed2088c",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -777,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e11217d",
+   "id": "ce4e71d7",
    "metadata": {
     "hide-output": false
    },
@@ -791,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "020edf27",
+   "id": "403cabcc",
    "metadata": {
     "hide-output": false
    },
@@ -816,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b8eb165",
+   "id": "446d51c4",
    "metadata": {},
    "source": [
     "Despite the simplicity of our implementation, we actually perform slightly better than Keras.\n",
@@ -827,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "448413e1",
+   "id": "62a233d2",
    "metadata": {
     "hide-output": false
    },
@@ -841,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ebdb18c",
+   "id": "c4342af2",
    "metadata": {},
    "source": [
     "Here’s a visualization of the quality of our fit."
@@ -850,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26916267",
+   "id": "80948ade",
    "metadata": {
     "hide-output": false
    },
@@ -867,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aef4e70f",
+   "id": "cb008542",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -880,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "872b32c1",
+   "id": "0d0923b0",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -891,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac3abcb2",
+   "id": "b20ad29c",
    "metadata": {
     "hide-output": false
    },
@@ -925,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b7adfd4",
+   "id": "c2d8b628",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -934,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53ca868",
+   "id": "2caddf48",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20636aa3",
+   "id": "68c0eae1",
    "metadata": {
     "hide-output": false
    },
@@ -978,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e49ea71",
+   "id": "8837cda8",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -993,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fddfda86",
+   "id": "95aad4cf",
    "metadata": {
     "hide-output": false
    },
@@ -1026,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edef7cbf",
+   "id": "25f18754",
    "metadata": {
     "hide-output": false
    },
@@ -1052,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6506d5c1",
+   "id": "7fa65e2c",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1061,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3a237df",
+   "id": "83636ef1",
    "metadata": {
     "hide-output": false
    },
@@ -1078,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e307854",
+   "id": "bcadf236",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1089,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d042ab4",
+   "id": "8f0dd44f",
    "metadata": {
     "hide-output": false
    },
@@ -1125,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c8d61b",
+   "id": "2001bda9",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1145,7 +1152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a1bdfe",
+   "id": "048c4439",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1153,7 +1160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a2e3c4",
+   "id": "86b101d4",
    "metadata": {},
    "source": [
     "## Exercise 23.1\n",
@@ -1184,7 +1191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1864da7f",
+   "id": "021e760b",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 23.1](https://jax.quantecon.org/#jax_nn_ex1)\n",
@@ -1199,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdebee04",
+   "id": "f5229431",
    "metadata": {
     "hide-output": false
    },
@@ -1243,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c572c4",
+   "id": "baf48d3f",
    "metadata": {},
    "source": [
     "**Strategy 2: Deeper Network + Learning Rate Schedule**\n",
@@ -1254,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecc2dfbf",
+   "id": "e27451c3",
    "metadata": {
     "hide-output": false
    },
@@ -1310,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f44cf2",
+   "id": "d843646b",
    "metadata": {},
    "source": [
     "**Strategy 3: ELU Activation**\n",
@@ -1321,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9647d23e",
+   "id": "9c3875ca",
    "metadata": {
     "hide-output": false
    },
@@ -1389,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b42774b",
+   "id": "80540606",
    "metadata": {},
    "source": [
     "**Strategy 4: SELU Activation**\n",
@@ -1400,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44ea1ef",
+   "id": "745b1e98",
    "metadata": {
     "hide-output": false
    },
@@ -1468,7 +1475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e5890a8",
+   "id": "0f5f0d22",
    "metadata": {},
    "source": [
     "**Results Summary**\n",
@@ -1479,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c6ad147",
+   "id": "ad13dee4",
    "metadata": {
     "hide-output": false
    },
@@ -1527,7 +1534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "630e45c2",
+   "id": "dd9ee145",
    "metadata": {},
    "source": [
     "The experimental results reveal several lessons:\n",
@@ -1541,7 +1548,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.9017298,
+  "date": 1764546699.1097894,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
