--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18a3bb97",
+   "id": "054a541e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41b8608c",
+   "id": "1ac9b887",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802f58d5",
+   "id": "c28db2af",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "In this lecture we show how to implement one-dimensional nonlinear regression\n",
     "using a neural network.\n",
@@ -52,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea679d0",
+   "id": "f773e647",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39d3fea3",
+   "id": "93302bd8",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -73,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51058c9b",
+   "id": "f56270bc",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fec12de",
+   "id": "29ab0636",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -93,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8229ed34",
+   "id": "0a4f8dd1",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d26501",
+   "id": "45ac498b",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -116,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb84bb8b",
+   "id": "63c4b820",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7916e354",
+   "id": "54037fd9",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -157,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "340eafa4",
+   "id": "0afc0295",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d35110",
+   "id": "4859ffdd",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -188,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8337756d",
+   "id": "815d2077",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3e0819",
+   "id": "a79657d7",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -208,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7e29551",
+   "id": "f9ab9546",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "711529e8",
+   "id": "03aff0fb",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -232,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2210c72",
+   "id": "5ee0a64e",
    "metadata": {
     "hide-output": false
    },
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ff52cd6",
+   "id": "9ac2ee0b",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -253,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4766a69",
+   "id": "50a72f76",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -270,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2deb50d",
+   "id": "92682374",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b61e6c5d",
+   "id": "04843ae3",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "311d26c4",
+   "id": "36aa0c88",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -317,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a4a9a3",
+   "id": "d0dee946",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8266131f",
+   "id": "5ad3e9e6",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -354,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f14e250",
+   "id": "c7178ec7",
    "metadata": {
     "hide-output": false
    },
@@ -378,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06c0774",
+   "id": "d6b60946",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -388,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7f8022",
+   "id": "a172f35b",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -399,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ecf888e",
+   "id": "78dbb4fd",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2e8fe4a",
+   "id": "a9056549",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -419,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9052095d",
+   "id": "0eab3c66",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "942d226e",
+   "id": "62836d5b",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -441,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab70ba75",
+   "id": "3f5cb27c",
    "metadata": {
     "hide-output": false
    },
@@ -454,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94f54398",
+   "id": "2afd02a4",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -463,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee4a288",
+   "id": "cfe0304c",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ed7a8de",
+   "id": "938da9d2",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -484,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f9e61a8",
+   "id": "59c0af34",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d753db04",
+   "id": "da76be0b",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -504,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bd6e897",
+   "id": "c5f7815a",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "967aee50",
+   "id": "c5c4e871",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -528,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e193323",
+   "id": "6be00f20",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed1ecac6",
+   "id": "4586f7de",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -554,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63029ec1",
+   "id": "c8cc5fa3",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "682add35",
+   "id": "00a8981d",
    "metadata": {
     "hide-output": false
    },
@@ -580,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecf2f362",
+   "id": "3bf3ac25",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd31685c",
+   "id": "768d9d0c",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -602,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdd5ba63",
+   "id": "b55f385e",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de2ed305",
+   "id": "7f98759b",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -626,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa79ff2",
+   "id": "509d57a9",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07a377fd",
+   "id": "e5606879",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d7cd753",
+   "id": "fa66956d",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb79cdeb",
+   "id": "19b8dd08",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -677,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.9483304,
+  "date": 1764546699.155387,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
