--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "feca85ac",
+   "id": "44177d51",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15974452",
+   "id": "3409678b",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -24,12 +24,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ecf0c21",
+   "id": "4217d9f3",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
@@ -37,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7aa1435",
+   "id": "59454122",
    "metadata": {
     "hide-output": false
    },
@@ -48,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a132cb2",
+   "id": "0ab2fde7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -69,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25185d46",
+   "id": "cb308378",
    "metadata": {
     "hide-output": false
    },
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6384ca6",
+   "id": "a789003b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -97,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6d8e7c7",
+   "id": "843d4735",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "819acc71",
+   "id": "ff37311f",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd9378e",
+   "id": "5bf817e2",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -149,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d9c708",
+   "id": "720656db",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ea12cea",
+   "id": "d941f44e",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -243,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f024a0",
+   "id": "428b06b8",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd7a4b2d",
+   "id": "928ded53",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -271,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d296c24",
+   "id": "3aeab3fb",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04917176",
+   "id": "f01eea10",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -299,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb655dc",
+   "id": "47be8b81",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d3d0f9",
+   "id": "1d2567c6",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -340,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54d9917d",
+   "id": "2d0d324a",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86462bb3",
+   "id": "7277a52c",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -363,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88f59ddc",
+   "id": "98aff926",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e35ed2a",
+   "id": "af26e6b4",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -385,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d786e42b",
+   "id": "8ca14514",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dd8f2d7",
+   "id": "c8761e9d",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -411,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c37c3312",
+   "id": "2983a742",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -432,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5479e7a0",
+   "id": "00647034",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cdba1df",
+   "id": "417cccc2",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -482,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e888400",
+   "id": "5b6de254",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1bec5f0",
+   "id": "18ba2a22",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6529beb5",
+   "id": "6465aeaf",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -518,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee60981",
+   "id": "ac59690f",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3129ccea",
+   "id": "e11fdfd1",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -544,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830b068d",
+   "id": "9c4a1723",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -560,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e09df536",
+   "id": "7b9237f1",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#kp_ex1)"
@@ -569,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a8e3073",
+   "id": "4416885a",
    "metadata": {
     "hide-output": false
    },
@@ -606,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd7170a",
+   "id": "80e19181",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -615,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60b3eeac",
+   "id": "abdb3801",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a5584d",
+   "id": "b944edcc",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d55c5a11",
+   "id": "5e942b3c",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -657,7 +665,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.9698966,
+  "date": 1764546699.1784465,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
