--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "045b0dae",
+   "id": "4d4487bb",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "814ac075",
+   "id": "fb2010d7",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,17 +21,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "214b5a15",
+   "id": "ba094efc",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38b9849f",
+   "id": "3cae5fe3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -58,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78dba745",
+   "id": "003240cc",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7ca2c5f",
+   "id": "054fcb45",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -78,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7861b6e6",
+   "id": "7112b31a",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29a78752",
+   "id": "d583fe6b",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -98,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9987e9d",
+   "id": "9f8d26f6",
    "metadata": {
     "hide-output": false
    },
@@ -116,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c9594c9",
+   "id": "4be31e62",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -125,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c102c9",
+   "id": "ee83597b",
    "metadata": {
     "hide-output": false
    },
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941e231d",
+   "id": "719e91e2",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -188,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe7962f1",
+   "id": "6b3c560f",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -246,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3236754",
+   "id": "a1e33f6b",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -289,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a86cda8a",
+   "id": "1a36655b",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -457,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "115c2432",
+   "id": "3d82abfe",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -470,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83b23fc2",
+   "id": "b5ecca28",
    "metadata": {
     "hide-output": false
    },
@@ -504,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f3bc42",
+   "id": "213fd7a0",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -513,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5774de92",
+   "id": "f3ee9424",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf7986f7",
+   "id": "d6191401",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -548,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e6b8bc",
+   "id": "36839064",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a3bb889",
+   "id": "52ded020",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -589,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f26ef89",
+   "id": "a385d3c2",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df80bd53",
+   "id": "1c971361",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -619,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe06bb5b",
+   "id": "882d9932",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a155b807",
+   "id": "03316ade",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -648,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "247c6d8a",
+   "id": "4deb3025",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee0055d",
+   "id": "0740ee58",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -671,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f8acb0e",
+   "id": "25390a78",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed00f95e",
+   "id": "9ed56361",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -717,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eafdf664",
+   "id": "071f403c",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "732bac65",
+   "id": "2cdc5c27",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -755,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d4bf349",
+   "id": "435ea858",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -901,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "770ccf95",
+   "id": "d142677f",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -922,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c8129f3",
+   "id": "fe6888ed",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3834846",
+   "id": "38a36c36",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -976,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3047ccc2",
+   "id": "e092daf6",
    "metadata": {
     "hide-output": false
    },
@@ -1005,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc42bc7",
+   "id": "140fdc42",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1014,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "224972ec",
+   "id": "1ae477f6",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a84c33c",
+   "id": "953db606",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1066,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18ca956",
+   "id": "04c0b413",
    "metadata": {
     "hide-output": false
    },
@@ -1078,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa83577b",
+   "id": "fa100dbb",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1087,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01397e0e",
+   "id": "570f2e2e",
    "metadata": {
     "hide-output": false
    },
@@ -1101,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24bf6ae8",
+   "id": "34d9e359",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1110,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4078ed16",
+   "id": "c8edcca6",
    "metadata": {
     "hide-output": false
    },
@@ -1124,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1020cf28",
+   "id": "580432b0",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1133,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d6d826b",
+   "id": "aa9a73fc",
    "metadata": {
     "hide-output": false
    },
@@ -1150,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c4927b3",
+   "id": "8afc95d5",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2a16fa1",
+   "id": "64668d64",
    "metadata": {
     "hide-output": false
    },
@@ -1183,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8abf0234",
+   "id": "b7ec50ef",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1196,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92626a69",
+   "id": "1f09fe23",
    "metadata": {
     "hide-output": false
    },
@@ -1220,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ccf3c5f",
+   "id": "3121269d",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1233,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c13790c",
+   "id": "b63cf921",
    "metadata": {
     "hide-output": false
    },
@@ -1262,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5aea625",
+   "id": "c3e1a6c7",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1271,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "323d0ce1",
+   "id": "693b4b3f",
    "metadata": {
     "hide-output": false
    },
@@ -1310,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8097801",
+   "id": "70ee8298",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1319,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a303c570",
+   "id": "868d8cac",
    "metadata": {
     "hide-output": false
    },
@@ -1332,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b2823c1",
+   "id": "ef03940b",
    "metadata": {
     "hide-output": false
    },
@@ -1346,7 +1353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5678d42d",
+   "id": "90eb2e59",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1355,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64f9f4a4",
+   "id": "924df601",
    "metadata": {
     "hide-output": false
    },
@@ -1369,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa362b4",
+   "id": "47275f52",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1378,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54cfd209",
+   "id": "63f5c9db",
    "metadata": {
     "hide-output": false
    },
@@ -1392,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "569ff208",
+   "id": "31cc9180",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1401,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be8e8eb",
+   "id": "b96718f6",
    "metadata": {
     "hide-output": false
    },
@@ -1412,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2793826",
+   "id": "f12b3158",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1421,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f7fae6",
+   "id": "03d241db",
    "metadata": {
     "hide-output": false
    },
@@ -1434,7 +1441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcb1f0ec",
+   "id": "4b4ff1a8",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1451,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a098458",
+   "id": "ae0ddf60",
    "metadata": {
     "hide-output": false
    },
@@ -1479,7 +1486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcbdddf3",
+   "id": "13097f35",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1489,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2877666",
+   "id": "556e6ef5",
    "metadata": {
     "hide-output": false
    },
@@ -1511,7 +1518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fbfa0eb",
+   "id": "c83eb9ba",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1520,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f34a8b13",
+   "id": "583fff5a",
    "metadata": {
     "hide-output": false
    },
@@ -1532,7 +1539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a243db",
+   "id": "6ad52870",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1541,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f829f5a",
+   "id": "ef3b31b6",
    "metadata": {
     "hide-output": false
    },
@@ -1555,7 +1562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "959ffee4",
+   "id": "31ec0936",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1564,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8718b6c5",
+   "id": "d8a70567",
    "metadata": {
     "hide-output": false
    },
@@ -1578,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12dd19f5",
+   "id": "ba6fbfa9",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1587,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6332046",
+   "id": "0bedc70d",
    "metadata": {
     "hide-output": false
    },
@@ -1598,7 +1605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd32fe4",
+   "id": "f9e24c18",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1607,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54ffecf7",
+   "id": "15c75426",
    "metadata": {
     "hide-output": false
    },
@@ -1618,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7652f2a1",
+   "id": "ce699edc",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1629,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47989309",
+   "id": "b91d9b7b",
    "metadata": {
     "hide-output": false
    },
@@ -1646,7 +1653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58db31b1",
+   "id": "b5caa4fa",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1657,7 +1664,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.0646203,
+  "date": 1764546699.2785609,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
