--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ee0d56e",
+   "id": "83f3543c",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db29d7e",
+   "id": "3f65e4f1",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,17 +21,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5503a1f9",
+   "id": "60153483",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fa14f171",
+   "id": "a799edb1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -48,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3835fd25",
+   "id": "99e16229",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fc26f7e",
+   "id": "be8323e9",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "705db928",
+   "id": "1deba150",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a6200f",
+   "id": "b3b3466a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -92,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e90444af",
+   "id": "dce9a244",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e4d5308",
+   "id": "42c3ec89",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -118,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "812ccb95",
+   "id": "0efd348c",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -140,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fd0082d",
+   "id": "af1d7aae",
    "metadata": {
     "hide-output": false
    },
@@ -153,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ebbb094",
+   "id": "9f6dc8f9",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -164,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50e5db04",
+   "id": "0555d2e9",
    "metadata": {
     "hide-output": false
    },
@@ -176,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d3ff901",
+   "id": "9e324954",
    "metadata": {
     "hide-output": false
    },
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2bfba1",
+   "id": "8b3d8b97",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -233,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04ccaef9",
+   "id": "d74259b0",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -259,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9c18ed5",
+   "id": "99da89e2",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdf12ee1",
+   "id": "31190897",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -309,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8918ae2",
+   "id": "4d0bc531",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e984515",
+   "id": "fd0a4fb4",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -333,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "424da86b",
+   "id": "f93e3685",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c0d5b7",
+   "id": "1fbf9396",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -367,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60221425",
+   "id": "41f1bbd0",
    "metadata": {
     "hide-output": false
    },
@@ -379,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c9d26eb",
+   "id": "d85be9cd",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -393,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "627afc12",
+   "id": "a5befc75",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bbd502f",
+   "id": "0d0709c3",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -443,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06e9aefc",
+   "id": "42fe201f",
    "metadata": {
     "hide-output": false
    },
@@ -469,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ad275cc",
+   "id": "179412c2",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -481,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f92ce40f",
+   "id": "3498a3bd",
    "metadata": {
     "hide-output": false
    },
@@ -492,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ddbe692",
+   "id": "e03601b6",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -510,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b22882b",
+   "id": "4f007883",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84210d89",
+   "id": "77b9b685",
    "metadata": {
     "hide-output": false
    },
@@ -535,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f899fa24",
+   "id": "4482ef72",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -546,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb01552",
+   "id": "7ea1e582",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -591,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93bbb0e",
+   "id": "6d0cd59d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -602,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "762f6cf8",
+   "id": "fa3fdd41",
    "metadata": {
     "hide-output": false
    },
@@ -615,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77981808",
+   "id": "ff16a803",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -624,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4e2d04",
+   "id": "2daaa3d5",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60d5d76c",
+   "id": "903b64ac",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -647,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ca3851f",
+   "id": "137ea00b",
    "metadata": {
     "hide-output": false
    },
@@ -658,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20d29630",
+   "id": "96468a6e",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -667,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b6512ff",
+   "id": "f7bdc130",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a0f47d",
+   "id": "39cc9f70",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -688,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c906682",
+   "id": "06d0e9ed",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0059f164",
+   "id": "c0dd4d53",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -716,7 +723,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.0887446,
+  "date": 1764546699.307581,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
