--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "12b06d76",
+   "id": "162483de",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a260e149",
+   "id": "2875986c",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -21,17 +21,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9006791c",
+   "id": "e76e88c5",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "df4da6bd",
+   "id": "172071c4",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -53,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e79fd3c",
+   "id": "c42a32ea",
    "metadata": {
     "hide-output": false
    },
@@ -67,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01833dd8",
+   "id": "796ce13d",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -76,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136b7ac4",
+   "id": "22b227c4",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25b151c9",
+   "id": "b06bc1bd",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -112,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b699249",
+   "id": "5a3a1f68",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8acc94a9",
+   "id": "dc9bba45",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -146,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ed3181",
+   "id": "70c38a41",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d5ea72",
+   "id": "0cf366e6",
    "metadata": {},
    "source": [
     "Here we go"
@@ -175,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abe235e7",
+   "id": "e5ab1bb5",
    "metadata": {
     "hide-output": false
    },
@@ -186,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c86359d1",
+   "id": "508bc4ee",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -194,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63ec32f",
+   "id": "043988af",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -246,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27202102",
+   "id": "789c3a0b",
    "metadata": {
     "hide-output": false
    },
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8611f7c",
+   "id": "83acb26f",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -268,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d484cca",
+   "id": "b4134bad",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -293,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3da76d52",
+   "id": "acb5e31c",
    "metadata": {
     "hide-output": false
    },
@@ -325,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6259de0",
+   "id": "aebe5728",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -338,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fefb7b3",
+   "id": "3dfc3ece",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6978abe5",
+   "id": "c94328e2",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -369,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f5c897e",
+   "id": "77efdbdd",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "473d239a",
+   "id": "2199b056",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -391,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38640111",
+   "id": "36989f24",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b879f6",
+   "id": "95bbb223",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -412,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366cb105",
+   "id": "1ff4e5ec",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf02bd57",
+   "id": "44f02cd4",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -433,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7197af5d",
+   "id": "01e54617",
    "metadata": {
     "hide-output": false
    },
@@ -444,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c757a768",
+   "id": "14a77609",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -454,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4130452f",
+   "id": "f32c1589",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a53ab6",
+   "id": "af777b66",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -479,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7535248",
+   "id": "93c734b1",
    "metadata": {
     "hide-output": false
    },
@@ -491,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e28553b9",
+   "id": "d659b128",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -499,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db5e3968",
+   "id": "d4fa37c6",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -559,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1be6e2a",
+   "id": "d49e8913",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -570,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07d7be30",
+   "id": "08caf6c0",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5631561",
+   "id": "f4701d99",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -598,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698b4d7a",
+   "id": "ddfcdb4a",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c63ec127",
+   "id": "7a91eb42",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -619,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "673572bd",
+   "id": "bc46f8f5",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20c66972",
+   "id": "af97e097",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -649,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe0873a3",
+   "id": "902bd5d5",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d7102e2",
+   "id": "1e75ba9c",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -671,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eea4729",
+   "id": "730f3da7",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fed3f44",
+   "id": "566af9cd",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aed68da9",
+   "id": "90fa4dde",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -715,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c957d5f0",
+   "id": "dfd8ac33",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ac0b2b4",
+   "id": "98b3c6f4",
    "metadata": {
     "hide-output": false
    },
@@ -745,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "394f7082",
+   "id": "edb5b2f9",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -753,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605d7e74",
+   "id": "4fb80bf2",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -799,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ecca0b8",
+   "id": "f80e21ef",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -810,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dff5d7b7",
+   "id": "5f3d1051",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d700028",
+   "id": "56531336",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -838,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbf74c65",
+   "id": "b5ba1515",
    "metadata": {
     "hide-output": false
    },
@@ -857,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cea546e",
+   "id": "9e54587d",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -870,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a385fff5",
+   "id": "cbc61c68",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04c44f0",
+   "id": "21244634",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -889,7 +896,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.1161747,
+  "date": 1764546699.3362598,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
