--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ff8367c",
+   "id": "132aade5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6273b10e",
+   "id": "6c146e0c",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af1ffc63",
+   "id": "8bfc38b6",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
@@ -34,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e8ddd0",
+   "id": "63fd9bc7",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf850d47",
+   "id": "51ecb0fd",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -91,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eeb3519",
+   "id": "cf2d6281",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "824341c7",
+   "id": "410338af",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e71b653d",
+   "id": "4c097ff8",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db52636",
+   "id": "60e11a8b",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6dbb5a",
+   "id": "850022f3",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198ac518",
+   "id": "e2e39fb9",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -155,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d22d74f4",
+   "id": "76359beb",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df917a2",
+   "id": "366954b4",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -205,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e614df5",
+   "id": "508837c8",
    "metadata": {
     "hide-output": false
    },
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53650667",
+   "id": "afb239a2",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -256,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df35f029",
+   "id": "deca8df7",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cea988bd",
+   "id": "5c63922b",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -297,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e96c696",
+   "id": "a86eaac2",
    "metadata": {
     "hide-output": false
    },
@@ -312,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17841e95",
+   "id": "fa699dc5",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -321,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0182b50",
+   "id": "f116206d",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9224fc02",
+   "id": "abe36df3",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -345,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3172c838",
+   "id": "452010ad",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed68e1e8",
+   "id": "0b14814b",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -419,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6740efc9",
+   "id": "e9284ba1",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e6b6f4",
+   "id": "841ce63d",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -457,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a0a4788",
+   "id": "faf7073f",
    "metadata": {
     "hide-output": false
    },
@@ -482,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e7405c0",
+   "id": "e485b5e5",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -491,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d471be",
+   "id": "629c3e97",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6857b4",
+   "id": "362d73db",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -528,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31d8940c",
+   "id": "204f3afc",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "546881b1",
+   "id": "74efb678",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -558,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fc1edf8",
+   "id": "18273b4e",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "300f488c",
+   "id": "d4a5cb9d",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -586,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb157c1d",
+   "id": "ba3e4f0b",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a61a6e",
+   "id": "3b085a6a",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -633,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61013ef6",
+   "id": "211284f8",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "882a2291",
+   "id": "39a9f3f8",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -656,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea97e11f",
+   "id": "98a763fe",
    "metadata": {
     "hide-output": false
    },
@@ -682,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c800686f",
+   "id": "f753b329",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "466546f7",
+   "id": "7fd25d29",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "520100b1",
+   "id": "3c2c93a7",
    "metadata": {
     "hide-output": false
    },
@@ -727,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58cb7eb6",
+   "id": "373d59de",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -736,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d333f2",
+   "id": "3f872c21",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a3625f",
+   "id": "d0a69d22",
    "metadata": {
     "hide-output": false
    },
@@ -766,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f2379e",
+   "id": "a337a427",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "521d41e2",
+   "id": "591c07dc",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -791,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe8c1923",
+   "id": "ff4d205f",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "609e2aef",
+   "id": "9bc2cf15",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865b3e4b",
+   "id": "4e80e094",
    "metadata": {
     "hide-output": false
    },
@@ -837,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a210179",
+   "id": "61ea5909",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -846,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85d798b",
+   "id": "76b6ad68",
    "metadata": {
     "hide-output": false
    },
@@ -862,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b1256c",
+   "id": "f405dd36",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -873,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e222afc",
+   "id": "aedb8bba",
    "metadata": {
     "hide-output": false
    },
@@ -885,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66f117ae",
+   "id": "de8749b0",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f60fa67",
+   "id": "47134d1d",
    "metadata": {
     "hide-output": false
    },
@@ -914,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c645cc",
+   "id": "cc07c3fa",
    "metadata": {
     "hide-output": false
    },
@@ -927,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7be24530",
+   "id": "8a8d080a",
    "metadata": {
     "hide-output": false
    },
@@ -943,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e20f49c1",
+   "id": "da683cfd",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c16c04",
+   "id": "8bf9553d",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +993,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.1412961,
+  "date": 1764546699.3626747,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
