--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c77e68a8",
+   "id": "b5600645",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5be9d5c",
+   "id": "be498131",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34880481",
+   "id": "32478784",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
    ]
@@ -34,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c96d83",
+   "id": "390bc73d",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de462158",
+   "id": "14dc53f4",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -54,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d2a2f7c",
+   "id": "45e6604d",
    "metadata": {
     "hide-output": false
    },
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5587061",
+   "id": "479cf682",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -80,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b333ffe3",
+   "id": "993e86bf",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a548677f",
+   "id": "05fac49c",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -100,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df04b73e",
+   "id": "ebb70355",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de4825dd",
+   "id": "caec8f30",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9313a19d",
+   "id": "e5bfb7f3",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b768b31",
+   "id": "4e6674db",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -186,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0856a35d",
+   "id": "27fca199",
    "metadata": {
     "hide-output": false
    },
@@ -216,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55f51a53",
+   "id": "facf4b74",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -231,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0d98ee1",
+   "id": "abf5d6b4",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d5b6966",
+   "id": "f435bd92",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -283,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71b0558",
+   "id": "1a809211",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bae1ba18",
+   "id": "e1b382dc",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -311,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67cad6bc",
+   "id": "909524ff",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68f85f22",
+   "id": "1577a84b",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -341,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f8f2356",
+   "id": "acf203df",
    "metadata": {
     "hide-output": false
    },
@@ -358,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda34472",
+   "id": "05b9d744",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af7b96c0",
+   "id": "50fe36b2",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -382,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea7e41c4",
+   "id": "e1d6eee5",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a251231",
+   "id": "fe804b85",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -405,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b33081e",
+   "id": "a600c5f6",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e8a9c57",
+   "id": "bc2686d7",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -432,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c686dd",
+   "id": "121c67b3",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -446,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c418884",
+   "id": "da01797c",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aab943af",
+   "id": "cd6878e4",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -482,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38d2fba5",
+   "id": "a480be7b",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e6090a",
+   "id": "2c9567d7",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -535,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffec4c2c",
+   "id": "29d2aaec",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb26c422",
+   "id": "028f9524",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -558,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f2488fe",
+   "id": "55d8d3a1",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9e664d9",
+   "id": "d47c4f2b",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -583,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "977ae09e",
+   "id": "3abcff33",
    "metadata": {
     "hide-output": false
    },
@@ -598,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66dafe54",
+   "id": "9a4590f9",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -619,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c1a02d",
+   "id": "a1b7c90f",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "762754c4",
+   "id": "ada19a5c",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -659,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e57d90",
+   "id": "ce11ad50",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e435e4a",
+   "id": "9c6ee193",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -686,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebfaf19f",
+   "id": "a1aa3a1b",
    "metadata": {
     "hide-output": false
    },
@@ -702,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39e7924a",
+   "id": "610d4810",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -711,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8afb8355",
+   "id": "c0623de0",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c8d3655",
+   "id": "ce2aeafe",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -735,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f41f7bc",
+   "id": "a2450fb2",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d76a13",
+   "id": "78557903",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -758,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38c60819",
+   "id": "f6731053",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c30c7a4d",
+   "id": "16e74101",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -780,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6eaa8f9",
+   "id": "ca46f6f4",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -811,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a51e97a0",
+   "id": "23d38e87",
    "metadata": {
     "hide-output": false
    },
@@ -836,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0888e236",
+   "id": "b0815b69",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -845,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "014465bb",
+   "id": "ab1b4366",
    "metadata": {
     "hide-output": false
    },
@@ -858,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c346554",
+   "id": "56cfd474",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -867,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea25469",
+   "id": "82c0017c",
    "metadata": {
     "hide-output": false
    },
@@ -894,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a55ba5cf",
+   "id": "78999611",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -903,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12d72860",
+   "id": "fb732c17",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c640f9",
+   "id": "2fefeec6",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -928,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2e407cd",
+   "id": "983b736d",
    "metadata": {
     "hide-output": false
    },
@@ -943,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebc26be6",
+   "id": "219fd7d6",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -952,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e11e049a",
+   "id": "3d08e307",
    "metadata": {
     "hide-output": false
    },
@@ -966,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab32d1f",
+   "id": "2f07310b",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -975,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf564e3b",
+   "id": "1486df90",
    "metadata": {
     "hide-output": false
    },
@@ -987,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b7a22f",
+   "id": "0597e548",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -996,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "869c25af",
+   "id": "ca5ff09d",
    "metadata": {
     "hide-output": false
    },
@@ -1007,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df8da12",
+   "id": "f497591d",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1016,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd65736",
+   "id": "fc778ba5",
    "metadata": {
     "hide-output": false
    },
@@ -1027,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba29def3",
+   "id": "94057596",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1039,7 +1047,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.1749997,
+  "date": 1764546699.3935757,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
