--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8bd61612",
+   "id": "df7b5e3c",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0fd9de8",
+   "id": "ce5476af",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,17 +21,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d040c87",
+   "id": "b86b2813",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax)."
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7d0bf163",
+   "id": "7aeacd44",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -44,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad65616",
+   "id": "1bc631bf",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9daa67",
+   "id": "93f2f3f2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -66,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aa7f47f",
+   "id": "049d661d",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d1e890",
+   "id": "c880884f",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa7d87f",
+   "id": "d20acc15",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -124,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad1c9693",
+   "id": "a4de26ea",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe7fdf9e",
+   "id": "684d68a0",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -157,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74201e2a",
+   "id": "fdbf9ef1",
    "metadata": {
     "hide-output": false
    },
@@ -184,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61fc1006",
+   "id": "3583e1d4",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -193,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3dd10cc",
+   "id": "61dda301",
    "metadata": {
     "hide-output": false
    },
@@ -207,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e31bc4d",
+   "id": "bf10fdea",
    "metadata": {
     "hide-output": false
    },
@@ -228,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd1182c9",
+   "id": "722456ba",
    "metadata": {
     "hide-output": false
    },
@@ -241,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8b9e76",
+   "id": "97830897",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -250,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df4340b6",
+   "id": "51c3bdd3",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe3d36d3",
+   "id": "144c6a3c",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -271,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d6c4f2c",
+   "id": "b9ce9016",
    "metadata": {
     "hide-output": false
    },
@@ -283,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60fe3e6b",
+   "id": "e486af66",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -293,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d43ed181",
+   "id": "d9eadc8f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -301,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578552dd",
+   "id": "48fe4bea",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -325,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce1c1456",
+   "id": "20031143",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ebc6817",
+   "id": "1fc637b7",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -447,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa5863e1",
+   "id": "4962a5e6",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d13b1424",
+   "id": "788d8b6a",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -486,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e728617",
+   "id": "8199ed05",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d6be07e",
+   "id": "468d12d7",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -530,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fada1412",
+   "id": "5fce3876",
    "metadata": {
     "hide-output": false
    },
@@ -551,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261d930e",
+   "id": "5598085c",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -560,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37aa5ceb",
+   "id": "655562af",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b0f6feb",
+   "id": "08e59f45",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -580,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ac1f88",
+   "id": "b57eff56",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f39788",
+   "id": "82e51849",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -601,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea128d8",
+   "id": "7b554279",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da51ede6",
+   "id": "01cacda9",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa4e655",
+   "id": "fedeccc9",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -634,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a2b98cd",
+   "id": "65603b28",
    "metadata": {
     "hide-output": false
    },
@@ -645,7 +652,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.2760315,
+  "date": 1764546699.5010374,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
