--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "add7825f",
+   "id": "163583c7",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91917f7c",
+   "id": "81460358",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7edc40f6",
+   "id": "813ab085",
    "metadata": {},
    "source": [
     "# Troubleshooting\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14fb34b",
+   "id": "f2029063",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc22d34f",
+   "id": "58705582",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -91,7 +91,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.297293,
+  "date": 1764546699.5281212,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
