--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8fbae718",
+   "id": "d250732b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b685e7",
+   "id": "8c53639e",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4b30823",
+   "id": "f4b127e9",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "In this lecture we examine wealth dynamics in large cross-section of agents who\n",
     "are subject to both\n",
@@ -51,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "875100de",
+   "id": "1f9270e0",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42dc38b9",
+   "id": "3eaf3644",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -71,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ecb5db9",
+   "id": "40e73093",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "138f2b06",
+   "id": "45a0003b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -98,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a56066e5",
+   "id": "86325c58",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33a31ec4",
+   "id": "9518a128",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -170,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71c9023c",
+   "id": "193c0389",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93e0bffb",
+   "id": "b21a4848",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -189,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "574766a2",
+   "id": "f4f2e022",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88293bf5",
+   "id": "6e6ba9b9",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -244,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b8dd44",
+   "id": "4d3e36a8",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "503080a4",
+   "id": "562d5c6b",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -272,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e639b1",
+   "id": "78ed3fc7",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aaddabc",
+   "id": "00a392e5",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -305,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd31107e",
+   "id": "db6d1a17",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c8d756",
+   "id": "049d036a",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -342,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e838ec47",
+   "id": "ecc896df",
    "metadata": {
     "hide-output": false
    },
@@ -359,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75e61ef0",
+   "id": "40b4664f",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c9a2f12",
+   "id": "96913521",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -388,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c34cbd3",
+   "id": "a26e1042",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c14923c4",
+   "id": "2ab2b5fe",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -442,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b369c3f1",
+   "id": "4ec8e529",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71280011",
+   "id": "f3c4f0d6",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -471,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1168a6ec",
+   "id": "7fe7dead",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eee88480",
+   "id": "9a5c2bb4",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -497,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75b80b61",
+   "id": "eaf5c2a7",
    "metadata": {
     "hide-output": false
    },
@@ -537,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "281db626",
+   "id": "34bdc886",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -547,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61984b80",
+   "id": "ace4fe87",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1092e318",
+   "id": "2f0634ac",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b371d7e7",
+   "id": "6f1e69b1",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8f0292",
+   "id": "d24ccb50",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -606,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069ee689",
+   "id": "efee5267",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0db24fd8",
+   "id": "135e249a",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b562e154",
+   "id": "8ca7615d",
    "metadata": {
     "hide-output": false
    },
@@ -688,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6d2ec15",
+   "id": "cbeb5f86",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77227e6f",
+   "id": "9e483b5d",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd29bf20",
+   "id": "0bd6cff9",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -737,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b18e2c3e",
+   "id": "3d2a05af",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf2e410a",
+   "id": "f1de7e9b",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -775,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b1c3d5",
+   "id": "c8d7ba40",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -796,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c9ee1e0",
+   "id": "ab29ba0a",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba752d8",
+   "id": "20e23db5",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -824,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acac952a",
+   "id": "bc34bd28",
    "metadata": {
     "hide-output": false
    },
@@ -841,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83bfa6a9",
+   "id": "155430ed",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86adce05",
+   "id": "635ae861",
    "metadata": {
     "hide-output": false
    },
@@ -868,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64fe5160",
+   "id": "b5b967ae",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42c94717",
+   "id": "060341d3",
    "metadata": {
     "hide-output": false
    },
@@ -896,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a2611d9",
+   "id": "9e7ad070",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -918,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f4244b0",
+   "id": "7b5a746c",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "372df42c",
+   "id": "ea5c5a2f",
    "metadata": {
     "hide-output": false
    },
@@ -948,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c536ae",
+   "id": "32bb47ce",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62c4bd9d",
+   "id": "66233622",
    "metadata": {
     "hide-output": false
    },
@@ -972,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc80936",
+   "id": "49360669",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -980,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00c4d95a",
+   "id": "7b9d69eb",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -992,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5189e6af",
+   "id": "c649d525",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -1003,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d6904a",
+   "id": "b30dfe64",
    "metadata": {
     "hide-output": false
    },
@@ -1024,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1839fe2d",
+   "id": "c3785911",
    "metadata": {
     "hide-output": false
    },
@@ -1036,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ac94ff",
+   "id": "d96724f4",
    "metadata": {
     "hide-output": false
    },
@@ -1049,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58b64a1d",
+   "id": "dfc91d79",
    "metadata": {
     "hide-output": false
    },
@@ -1060,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0afaf872",
+   "id": "e388ea96",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1087,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5699b5f6",
+   "id": "e71d8db2",
    "metadata": {
     "hide-output": false
    },
@@ -1098,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "499ab2b8",
+   "id": "80c53596",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1107,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ab31f33",
+   "id": "1c4e223c",
    "metadata": {
     "hide-output": false
    },
@@ -1119,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec02a287",
+   "id": "be94dd1b",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1129,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b87ca0",
+   "id": "ef6527b9",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1140,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c8fe01",
+   "id": "c831c157",
    "metadata": {
     "hide-output": false
    },
@@ -1165,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c40a1a78",
+   "id": "2b7ba28b",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1176,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109f88f4",
+   "id": "2f897618",
    "metadata": {
     "hide-output": false
    },
@@ -1191,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29800790",
+   "id": "924c5a8d",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1199,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bf0dfe8",
+   "id": "5abba953",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1212,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0156acc8",
+   "id": "98fb7f86",
    "metadata": {
     "hide-output": false
    },
@@ -1223,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3bc016b",
+   "id": "721a6d45",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1233,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "902d9039",
+   "id": "64806ed5",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1244,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d222e13",
+   "id": "713026bc",
    "metadata": {
     "hide-output": false
    },
@@ -1271,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cdbe5e1",
+   "id": "2d6ed41a",
    "metadata": {
     "hide-output": false
    },
@@ -1286,7 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a494b5da",
+   "id": "2010a0be",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1308,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b844bc4",
+   "id": "2645d52a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1321,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4df053d6",
+   "id": "3580327c",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1368,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.3297572,
+  "date": 1764546699.5621421,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
