--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "46bbc160",
+   "id": "9f212938",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69fb7fef",
+   "id": "d33f4864",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e9fc2f",
+   "id": "acf51765",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "In this lecture we study a basic infinite-horizon job search problem with Markov wage\n",
     "draws\n",
@@ -44,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07089c60",
+   "id": "b9289066",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fe22cab",
+   "id": "e6ec797d",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -64,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4852522",
+   "id": "55b83425",
    "metadata": {
     "hide-output": false
    },
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eff9f547",
+   "id": "026e2453",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75a7b66",
+   "id": "9021002b",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5620d15c",
+   "id": "53736d2c",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -144,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d24d5a3a",
+   "id": "f15928da",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -155,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "215c5c3a",
+   "id": "7c580700",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4fe6e3f",
+   "id": "165d5ce7",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -175,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5005f48c",
+   "id": "a98bf0b2",
    "metadata": {
     "hide-output": false
    },
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1130dd2a",
+   "id": "8bac86a0",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -205,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e7551e5",
+   "id": "4954aeec",
    "metadata": {
     "hide-output": false
    },
@@ -217,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "092423c2",
+   "id": "e43a1998",
    "metadata": {
     "hide-output": false
    },
@@ -229,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63ec755",
+   "id": "74a68739",
    "metadata": {
     "hide-output": false
    },
@@ -241,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d26cdb16",
+   "id": "8960be08",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "408f4b93",
+   "id": "da388ecf",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -261,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eac950ca",
+   "id": "a02fa902",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9678629",
+   "id": "0fc1cafc",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -308,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4e954a",
+   "id": "8db3e7ea",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff00f974",
+   "id": "396de684",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -335,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d9d182e",
+   "id": "c975d4e2",
    "metadata": {
     "hide-output": false
    },
@@ -361,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b595e27c",
+   "id": "b01b58b0",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -372,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d931e95a",
+   "id": "2afddf0c",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "719fe9f4",
+   "id": "bb305312",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -395,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82a307b1",
+   "id": "44d5398d",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e3d0c37",
+   "id": "1c87b5c4",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -419,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed132cc1",
+   "id": "883cad35",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8dd8eca",
+   "id": "603c60ea",
    "metadata": {
     "hide-output": false
    },
@@ -444,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b24732d",
+   "id": "5a22b7eb",
    "metadata": {
     "hide-output": false
    },
@@ -455,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "729362e0",
+   "id": "cbf1a791",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -464,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb22dbdb",
+   "id": "fcf6c4bd",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d36bd032",
+   "id": "0cfe033a",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -488,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba7d693a",
+   "id": "7a127385",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -524,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0e4fea5",
+   "id": "0051f8ef",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26630d57",
+   "id": "416b22ae",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -557,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8a8634",
+   "id": "89e5f1aa",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -566,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abbfd16b",
+   "id": "6a5aad42",
    "metadata": {
     "hide-output": false
    },
@@ -645,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecee9227",
+   "id": "8bdd129f",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -654,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab49760d",
+   "id": "b913ebc3",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc672e97",
+   "id": "fb4fed2c",
    "metadata": {
     "hide-output": false
    },
@@ -688,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "767b3d71",
+   "id": "ddefaf18",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -699,7 +707,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540704.9230297,
+  "date": 1764546699.1326077,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
