--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aae1342b",
+   "id": "b888809f",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f210e6e2",
+   "id": "31b7ed8b",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fddac7a8",
+   "id": "12b30b2b",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -30,12 +30,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6634e1e4",
+   "id": "57276ee6",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "\n",
     "<a id='index-0'></a>"
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2288c61",
+   "id": "0c53b37d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -74,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8da8fa",
+   "id": "038f65dd",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d0c48d",
+   "id": "54ea6997",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7db36d9",
+   "id": "041a12d6",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7afd80a5",
+   "id": "aff3313c",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92ec679",
+   "id": "bb713809",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66d15fe5",
+   "id": "dc351e1a",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "793ceff8",
+   "id": "f70f4f2d",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -275,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5853a3b5",
+   "id": "6e9482d0",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5a647f",
+   "id": "3432548d",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -313,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c97235a",
+   "id": "111e4d9a",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -359,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eea2a94e",
+   "id": "3af8ac84",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -375,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "220b5807",
+   "id": "89da3a15",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -425,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6632fd3a",
+   "id": "aab3d9a4",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67772242",
+   "id": "771214bc",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -515,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a814fc99",
+   "id": "94bed848",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -530,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f22be94",
+   "id": "e7d8cf00",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be5293c2",
+   "id": "2594094e",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -573,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "053ee17c",
+   "id": "8a8225dd",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa7b69a",
+   "id": "3b3416e4",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -610,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cc694a3",
+   "id": "e93341da",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ce7588",
+   "id": "0cbf7c3d",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -648,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "501a2ed4",
+   "id": "ebd971de",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd541b88",
+   "id": "9f26414a",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94e7d370",
+   "id": "81cc06ee",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c14ccc02",
+   "id": "4a0d2bb5",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -713,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034072a0",
+   "id": "f0491e3c",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -724,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818afd49",
+   "id": "7e243c28",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47eb756b",
+   "id": "52d824c2",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -771,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fabe5bbe",
+   "id": "f92b484c",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d20d680",
+   "id": "174808e4",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -797,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdf30ea",
+   "id": "eb9b247a",
    "metadata": {
     "hide-output": false
    },
@@ -817,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3c963b",
+   "id": "32c3dd05",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -826,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb63c7e8",
+   "id": "f7a0dcde",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5696f0",
+   "id": "6f14a1df",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -865,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e9997d",
+   "id": "df47cd8d",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e25f0d45",
+   "id": "bc7fd394",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -900,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90d0a5b2",
+   "id": "b7e90239",
    "metadata": {
     "hide-output": false
    },
@@ -920,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed9114c3",
+   "id": "475aeac1",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46778077",
+   "id": "547b4d01",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -945,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da7fb563",
+   "id": "fe657a46",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f491bf1",
+   "id": "dedb3f42",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -972,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d172c1",
+   "id": "ec02e7ec",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -984,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7571e2",
+   "id": "d8b4bf01",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -993,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b785f154",
+   "id": "2c45d45d",
    "metadata": {
     "hide-output": false
    },
@@ -1016,7 +1024,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.015921,
+  "date": 1764546699.22714,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
