--- a/opt_savings_2.ipynb
+++ b/opt_savings_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "74c1253a",
+   "id": "aca39097",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3824f3eb",
+   "id": "a3b66a56",
    "metadata": {},
    "source": [
     "# Optimal Savings II: Alternative Algorithms"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d6189f4",
+   "id": "790d5bf2",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "In [Optimal Savings I: Value Function Iteration](https://jax.quantecon.org/opt_savings_1.html) we solved a simple version of the household optimal\n",
     "savings problem via value function iteration (VFI) using JAX.\n",
@@ -69,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7abf108",
+   "id": "0fdf0408",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f77c2342",
+   "id": "e0deb8ea",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -89,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2653de2c",
+   "id": "879585d2",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d963d209",
+   "id": "a956d48d",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running."
@@ -113,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7553373f",
+   "id": "77fc1832",
    "metadata": {
     "hide-output": false
    },
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace124de",
+   "id": "1ad17ad3",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -133,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818ff092",
+   "id": "7b0df2a6",
    "metadata": {
     "hide-output": false
    },
@@ -144,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3195a328",
+   "id": "0e31cf03",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -157,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "006ad4ec",
+   "id": "0f085bf7",
    "metadata": {
     "hide-output": false
    },
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63098350",
+   "id": "6d7af73c",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -196,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58e795cf",
+   "id": "310bff14",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa36cf9",
+   "id": "8cdc5692",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to vectorize $ B $ by simulating nested loops."
@@ -230,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccae99ec",
+   "id": "ae282d62",
    "metadata": {
     "hide-output": false
    },
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c2f3e4",
+   "id": "d5f49fed",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ B $."
@@ -252,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac93a00",
+   "id": "06958cae",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c094e1",
+   "id": "ca6f7f67",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -279,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe0ee07",
+   "id": "eb5623f3",
    "metadata": {
     "hide-output": false
    },
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8bd353f",
+   "id": "b16144d6",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -303,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f61f52",
+   "id": "709ead1f",
    "metadata": {
     "hide-output": false
    },
@@ -318,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72d9dec9",
+   "id": "6a89c8f4",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -332,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b0a99f",
+   "id": "b8c94b34",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb4b291",
+   "id": "d04bf587",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -369,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b0fc803",
+   "id": "10bd984c",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3c9fa1b",
+   "id": "57c7280d",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ r_\\sigma $."
@@ -390,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "202cfa61",
+   "id": "b8ede595",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b1da41f",
+   "id": "4cbfca39",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $ going through similar steps"
@@ -415,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc83ebf",
+   "id": "ae6ffc6f",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "672055f1",
+   "id": "d8c6a66d",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -487,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5ecccf",
+   "id": "27d170cd",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "828f31a0",
+   "id": "f8edf8a2",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -528,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35fa04ff",
+   "id": "c36b7682",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c770ba",
+   "id": "d9ddeb75",
    "metadata": {},
    "source": [
     "## Iteration\n",
@@ -565,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b158aa4",
+   "id": "f508e9a5",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41c64239",
+   "id": "6c814acc",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -604,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3252d56b",
+   "id": "58572e54",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6471e9b1",
+   "id": "b5a96659",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -638,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "434f8a7b",
+   "id": "9939496a",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcdbe6a8",
+   "id": "991554ae",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -666,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92375567",
+   "id": "753b40c7",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9c69d1e",
+   "id": "8a97dadf",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -713,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07846f6b",
+   "id": "b3452cd3",
    "metadata": {
     "hide-output": false
    },
@@ -727,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90cb010d",
+   "id": "459d6bf7",
    "metadata": {},
    "source": [
     "Here’s HPI."
@@ -736,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28913f49",
+   "id": "ac8727bb",
    "metadata": {
     "hide-output": false
    },
@@ -761,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e3561b",
+   "id": "279597d1",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -772,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10665663",
+   "id": "dbf7acf5",
    "metadata": {
     "hide-output": false
    },
@@ -789,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4412e197",
+   "id": "afb55d33",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9a1ccfa",
+   "id": "8f1d067e",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -813,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a764af2",
+   "id": "6f4ebf58",
    "metadata": {
     "hide-output": false
    },
@@ -828,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ad3dbc7",
+   "id": "f62d8395",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8c5a4fb",
+   "id": "f90016f8",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b6eefca",
+   "id": "487c251a",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -869,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02d769bb",
+   "id": "2170180c",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0519b82",
+   "id": "87ea5fd5",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fcbff87",
+   "id": "ef5761a1",
    "metadata": {
     "hide-output": false
    },
@@ -916,7 +924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3cabb45",
+   "id": "c8a6ab64",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -925,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d5b6c6",
+   "id": "3c6f956e",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afab4fe0",
+   "id": "93407771",
    "metadata": {
     "hide-output": false
    },
@@ -956,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daa123a6",
+   "id": "029cbe9b",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -967,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "354095be",
+   "id": "d167b255",
    "metadata": {
     "hide-output": false
    },
@@ -987,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72b009c6",
+   "id": "51ce0ed0",
    "metadata": {
     "hide-output": false
    },
@@ -1000,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "940b2699",
+   "id": "8e7da98d",
    "metadata": {
     "hide-output": false
    },
@@ -1017,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d477fedf",
+   "id": "6775ffc9",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1048,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.2029648,
+  "date": 1764546699.423348,
   "filename": "opt_savings_2.md",
   "kernelspec": {
    "display_name": "Python",
