--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2fe0c645",
+   "id": "0ce439e8",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8853d9e",
+   "id": "83114a9c",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffecb03e",
+   "id": "958653f0",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is designed to run on a GPU. To use Google Colab’s free GPUs, click the play icon top right, select Colab, and set the runtime to include a GPU. For local GPU setup, see the [JAX installation guide](https://github.com/google/jax).\n",
+    "This lecture was built using a machine with access to a GPU.\n",
+    "\n",
+    "[Google Colab](https://colab.research.google.com/) has a free tier with GPUs\n",
+    "that you can access as follows:\n",
+    "\n",
+    "1. Click on the “play” icon top right  \n",
+    "1. Select Colab  \n",
+    "1. Set the runtime environment to include a GPU  \n",
+    "\n",
     "\n",
     "This lecture provides a JAX implementation of “Overborrowing and Systemic Externalities” [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)] by [Javier Bianchi](http://www.javierbianchi.com/).\n",
     "\n",
@@ -36,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c41ed0a",
+   "id": "b68a408d",
    "metadata": {
     "hide-output": false
    },
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b5c955",
+   "id": "0307f773",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -56,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c39bd4d",
+   "id": "e427d5fb",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba85c0ed",
+   "id": "6ca68d50",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -101,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe0e153b",
+   "id": "33b212da",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bccd5c7",
+   "id": "cfeba251",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -127,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2612aaf4",
+   "id": "1a19c18d",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62192532",
+   "id": "93a49a80",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -150,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe0a748",
+   "id": "5aa528e6",
    "metadata": {
     "hide-output": false
    },
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9dd4d57",
+   "id": "2305712b",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -192,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c712521",
+   "id": "582dfafd",
    "metadata": {
     "hide-output": false
    },
@@ -230,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df9d06a",
+   "id": "a545fe70",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -239,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69763f82",
+   "id": "4ed28a3b",
    "metadata": {
     "hide-output": false
    },
@@ -271,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aa15d39",
+   "id": "8dd20f5c",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -282,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e61e11b9",
+   "id": "94350c07",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89bb45b1",
+   "id": "18d071ad",
    "metadata": {
     "hide-output": false
    },
@@ -315,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06e53c6a",
+   "id": "7181f274",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "807335d9",
+   "id": "1ca5cfdc",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30e0b703",
+   "id": "33d8bd7b",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -373,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dee1646d",
+   "id": "b52cde33",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -451,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61e7c94",
+   "id": "7e13882c",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -515,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb968c94",
+   "id": "a55fff63",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -546,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4bc2d9f",
+   "id": "1db9978d",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed7bf24",
+   "id": "1584d9a6",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee6fc0a7",
+   "id": "5e14f809",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -613,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f38781",
+   "id": "815fe322",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "445b91dc",
+   "id": "cb3c35cd",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -645,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab9b6765",
+   "id": "e92c27c0",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d86ac7dc",
+   "id": "9a7e83c0",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -678,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0acc9553",
+   "id": "637b8cd4",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "336303d1",
+   "id": "19f99b70",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -727,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b8256e9",
+   "id": "7c7fdd38",
    "metadata": {
     "hide-output": false
    },
@@ -748,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a436f326",
+   "id": "ba91fdcd",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -757,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628ea8fb",
+   "id": "05b282f5",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4416317a",
+   "id": "e9d8b923",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -795,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf19276d",
+   "id": "aec449c0",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9300d38f",
+   "id": "131f1858",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb720096",
+   "id": "2b7bc77e",
    "metadata": {
     "hide-output": false
    },
@@ -873,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78014115",
+   "id": "3bb3823e",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf79827",
+   "id": "f4754ee5",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -901,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fc75561",
+   "id": "2f4cbe93",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33e89a4",
+   "id": "8eaf6d97",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -938,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c90670",
+   "id": "07a24c33",
    "metadata": {
     "hide-output": false
    },
@@ -972,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1113e0e5",
+   "id": "16c4cda1",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1013,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfe8ab90",
+   "id": "ad016c8f",
    "metadata": {
     "hide-output": false
    },
@@ -1049,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c17616f",
+   "id": "ef49d8bc",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9574df",
+   "id": "d9b82caa",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1077,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d71479a6",
+   "id": "cefb1c8f",
    "metadata": {
     "hide-output": false
    },
@@ -1097,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f977191b",
+   "id": "c3dae862",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1106,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fdc2abc",
+   "id": "9884d92b",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e28aaa",
+   "id": "84cd02b0",
    "metadata": {
     "hide-output": false
    },
@@ -1159,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d96e4f7",
+   "id": "abd705a8",
    "metadata": {
     "hide-output": false
    },
@@ -1170,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff391316",
+   "id": "7836d8ad",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1179,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9395e308",
+   "id": "18c5288f",
    "metadata": {
     "hide-output": false
    },
@@ -1203,7 +1211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f6b05b",
+   "id": "f407a94e",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1213,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "582e093e",
+   "id": "ac1d4f48",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1224,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a511de0",
+   "id": "41a6ca49",
    "metadata": {
     "hide-output": false
    },
@@ -1238,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87ef5ec1",
+   "id": "2f5686e1",
    "metadata": {
     "hide-output": false
    },
@@ -1255,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a010b1a",
+   "id": "139c0912",
    "metadata": {
     "hide-output": false
    },
@@ -1271,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "663c0d84",
+   "id": "d9df675e",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1282,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6db155a1",
+   "id": "885d05ed",
    "metadata": {
     "hide-output": false
    },
@@ -1305,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fadf35d2",
+   "id": "1fe699d5",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1316,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "324c3b90",
+   "id": "47af8e49",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1324,7 +1332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b0e9ec8",
+   "id": "e98fb54c",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1342,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0452b8a8",
+   "id": "39a4ef84",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf4f81a",
+   "id": "60717e9c",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1387,7 +1395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea481f58",
+   "id": "d55e4145",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1396,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02afa00d",
+   "id": "7225d14a",
    "metadata": {
     "hide-output": false
    },
@@ -1408,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bff522ac",
+   "id": "4b9f446d",
    "metadata": {
     "hide-output": false
    },
@@ -1421,7 +1429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "499fb45e",
+   "id": "74e01e78",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1430,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a64585e7",
+   "id": "8a03dede",
    "metadata": {
     "hide-output": false
    },
@@ -1442,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76cf49ae",
+   "id": "afe39ed3",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1451,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b6b1e7",
+   "id": "7747c4da",
    "metadata": {
     "hide-output": false
    },
@@ -1465,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee7b43cb",
+   "id": "17090932",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1474,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e55223e4",
+   "id": "cbfd210b",
    "metadata": {
     "hide-output": false
    },
@@ -1492,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b815335f",
+   "id": "d56ef7f9",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1505,7 +1513,7 @@
   }
  ],
  "metadata": {
-  "date": 1764540705.2559717,
+  "date": 1764546699.4798226,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
